@@ -215,3 +215,4 @@ NOTICE:  SRID value -1 converted to the officially unknown SRID value 0
 #1697.3|1024
 #1734.1|1026
 #1755|01010000A0E6100000000000000040554000000000008041400000000000000000
+#1776|POLYGON((0 0,10 0,10 10,0 0))|POLYGON((0 0,10 0,10 10,0 0))
