@@ -3,6 +3,7 @@ PostGIS 2.0.1
 
 * Bug Fixes *
 
+  - #1776, fix ST_SymDifference(empty, geom) to return geom
   - #1708, improve restore of PosgreSQL 9.1 backups 
   - #1766, don't let ST_RemEdge* destroy peripheral TopoGeometry objects.
   - #1714, more robust handling of high topology tolerance.
